Compatibility with Java 4 is now supported.